tests/error/array_errors/assign_call.err
Error: Unsupported (at $FILE:13:4)
   | 
11 | @guppy(module)
12 | def main() -> None:
13 |     foo()[0] = 22
   |     ^^^^^ Assigning to this expression is not supported

Guppy compilation failed due to 1 previous error
